# chess-embedding-learning

./: .gitignore  README.md  colab_train_embedding.ipynb  config.yaml  evaluate_model.py  extract_positions.py  params.yaml  params_tensor.yaml  pyproject.toml  requirements.txt  train_model.py  util.py
.dvc/: config
data/: .gitignore  bitboards.dvc  pgn.dvc  tensors.dvc
data/pgn/: README.md  lichess_db_standard_rated_2013-01-truncated.pgn
models/: README.md
src/preprocessing/: config.yaml  extract_positions.py  util.py
src/training/: colab_train_embedding.ipynb  config.yaml  train_model.py
src/utils/: preprocessing.py  util.py
tools/: README.md  extract_positions.sh
